...
  <string name="platform_parameters_activity_title" translatable="false">Platform Parameters</string>
  <string name="platform_parameter_invalid_input_error_msg" translatable="false">Invalid Value</string>
  <string name="platform_parameter_invalid_input_alert_dialog_title" translatable="false">Invalid Inputs</string>
  <string name="platform_parameter_invalid_input_alert_dialog_message" translatable="false">Please ensure all fields have valid values to continue.</string>
  <string name="platform_parameter_reset" translatable="false">Reset</string>
  <string name="platform_parameters_save" translatable="false">Save</string>
  <string name="platform_parameter_never_synced_message" translatable="false">Never synced remotely. Using codebase default value.</string>
  <string name="platform_parameter_currently_overridden_message" translatable="false">Currently Overridden.</string>
  <string name="platform_parameter_synced_from_server_message" translatable="false">Synced with the Server.</string>
  <string name="platform_parameter_alert_icon_content_description" translatable="false">Overridden platform parameter indicator</string>
  <string name="platform_parameter_invalid_input_alert_dialog_okay_button" translatable="false">OK</string>
  <string name="app_restart_dialog_title" translatable="false">App Behavior Overridden</string>
  <string name="app_restart_dialog_message" translatable="false">Restart app to apply new configuration.</string>
  <string name="app_restart_dialog_button_text" translatable="false">Restart</string>
  <string name="pending_changes_dialog_save_button_text" translatable="false">Save</string>
...
