package org.oppia.android.app.devoptions.platformparameters

import android.app.Application
import android.content.Context
import android.graphics.drawable.ColorDrawable
import android.os.Bundle
import android.view.accessibility.AccessibilityNodeInfo
import android.widget.EditText
import androidx.appcompat.app.AppCompatActivity
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ActivityScenario.launch
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.PerformException
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.scrollToPosition
import androidx.test.espresso.matcher.RootMatchers.isDialog
import androidx.test.espresso.matcher.ViewMatchers.isChecked
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isEnabled
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.common.truth.Truth.assertThat
import dagger.Component
import kotlinx.coroutines.CoroutineDispatcher
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Deferred
import kotlinx.coroutines.async
import kotlinx.coroutines.flow.MutableStateFlow
import kotlinx.coroutines.flow.StateFlow
import org.hamcrest.Matchers.not
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.oppia.android.app.activity.ActivityComponent
import org.oppia.android.app.activity.ActivityComponentFactory
import org.oppia.android.app.activity.route.ActivityRouterModule
import org.oppia.android.app.application.ApplicationComponent
import org.oppia.android.app.application.ApplicationInjector
import org.oppia.android.app.application.ApplicationInjectorProvider
import org.oppia.android.app.application.ApplicationModule
import org.oppia.android.app.application.ApplicationStartupListenerModule
import org.oppia.android.app.application.testing.TestingBuildFlavorModule
import org.oppia.android.app.devoptions.DeveloperOptionsModule
import org.oppia.android.app.devoptions.DeveloperOptionsStarterModule
import org.oppia.android.app.devoptions.platformparameters.testing.PlatformParametersTestActivity
import org.oppia.android.app.model.EphemeralPlatformParameter
import org.oppia.android.app.model.LocalOverridePlatformParameterDatabase
import org.oppia.android.app.model.OverriddenPlatformParameter
import org.oppia.android.app.model.PlatformParameterId
import org.oppia.android.app.model.PlatformParameterValue
import org.oppia.android.app.model.RemotePlatformParameter
import org.oppia.android.app.model.RemotePlatformParameterAndFeatureFlagDatabase
import org.oppia.android.app.model.SyncStatus
import org.oppia.android.app.player.state.itemviewmodel.SplitScreenInteractionModule
import org.oppia.android.app.recyclerview.RecyclerViewMatcher
import org.oppia.android.app.recyclerview.RecyclerViewMatcher.Companion.atPositionOnView
import org.oppia.android.app.shim.ViewBindingShimModule
import org.oppia.android.app.test.R
import org.oppia.android.app.translation.testing.ActivityRecreatorTestModule
import org.oppia.android.app.utility.OrientationChangeAction
import org.oppia.android.data.backends.gae.NetworkConfigProdModule
import org.oppia.android.data.backends.gae.RetrofitModule
import org.oppia.android.data.backends.gae.RetrofitServiceModule
import org.oppia.android.data.persistence.PersistentCacheStore
import org.oppia.android.domain.classify.InteractionsModule
import org.oppia.android.domain.classify.rules.algebraicexpressioninput.AlgebraicExpressionInputModule
import org.oppia.android.domain.classify.rules.continueinteraction.ContinueModule
import org.oppia.android.domain.classify.rules.dragAndDropSortInput.DragDropSortInputModule
import org.oppia.android.domain.classify.rules.fractioninput.FractionInputModule
import org.oppia.android.domain.classify.rules.imageClickInput.ImageClickInputModule
import org.oppia.android.domain.classify.rules.itemselectioninput.ItemSelectionInputModule
import org.oppia.android.domain.classify.rules.mathequationinput.MathEquationInputModule
import org.oppia.android.domain.classify.rules.multiplechoiceinput.MultipleChoiceInputModule
import org.oppia.android.domain.classify.rules.numberwithunits.NumberWithUnitsRuleModule
import org.oppia.android.domain.classify.rules.numericexpressioninput.NumericExpressionInputModule
import org.oppia.android.domain.classify.rules.numericinput.NumericInputRuleModule
import org.oppia.android.domain.classify.rules.ratioinput.RatioInputModule
import org.oppia.android.domain.classify.rules.textinput.TextInputRuleModule
import org.oppia.android.domain.exploration.ExplorationProgressModule
import org.oppia.android.domain.exploration.ExplorationStorageModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionConfigModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionProdModule
import org.oppia.android.domain.onboarding.ExpirationMetaDataRetrieverModule
import org.oppia.android.domain.oppialogger.LogStorageModule
import org.oppia.android.domain.oppialogger.LoggingIdentifierModule
import org.oppia.android.domain.oppialogger.analytics.ApplicationLifecycleModule
import org.oppia.android.domain.oppialogger.analytics.CpuPerformanceSnapshotterModule
import org.oppia.android.domain.oppialogger.logscheduler.MetricLogSchedulerModule
import org.oppia.android.domain.oppialogger.loguploader.LogReportWorkerModule
import org.oppia.android.domain.platformparameter.PlatformParameterControllerDebugImpl
import org.oppia.android.domain.platformparameter.PlatformParameterSingletonModule
import org.oppia.android.domain.question.QuestionModule
import org.oppia.android.domain.workmanager.WorkManagerConfigurationModule
import org.oppia.android.testing.OppiaTestRule
import org.oppia.android.testing.TestLogReportingModule
import org.oppia.android.testing.assertThrows
import org.oppia.android.testing.data.DataProviderTestMonitor
import org.oppia.android.testing.espresso.EditTextInputAction.replaceText
import org.oppia.android.testing.espresso.TextInputAction.Companion.hasErrorText
import org.oppia.android.testing.firebase.TestAuthenticationModule
import org.oppia.android.testing.junit.InitializeDefaultLocaleRule
import org.oppia.android.testing.platformparameter.TestPlatformParameterModule
import org.oppia.android.testing.robolectric.RobolectricModule
import org.oppia.android.testing.threading.TestCoroutineDispatchers
import org.oppia.android.testing.threading.TestDispatcherModule
import org.oppia.android.testing.time.FakeOppiaClockModule
import org.oppia.android.util.accessibility.AccessibilityTestModule
import org.oppia.android.util.caching.AssetModule
import org.oppia.android.util.data.AsyncResult
import org.oppia.android.util.gcsresource.GcsResourceModule
import org.oppia.android.util.locale.LocaleProdModule
import org.oppia.android.util.logging.LoggerModule
import org.oppia.android.util.logging.SyncStatusModule
import org.oppia.android.util.networking.NetworkConnectionDebugUtilModule
import org.oppia.android.util.networking.NetworkConnectionUtilDebugModule
import org.oppia.android.util.parser.html.HtmlParserEntityTypeModule
import org.oppia.android.util.parser.image.GlideImageLoaderModule
import org.oppia.android.util.parser.image.ImageParsingModule
import org.oppia.android.util.threading.BackgroundDispatcher
import org.robolectric.annotation.Config
import org.robolectric.annotation.LooperMode
import javax.inject.Inject
import javax.inject.Singleton

/** Tests for [PlatformParametersFragment]. */
@RunWith(AndroidJUnit4::class)
@LooperMode(LooperMode.Mode.PAUSED)
@Config(
  application = PlatformParametersFragmentTest.TestApplication::class,
  qualifiers = "port-xxhdpi"
)
class PlatformParametersFragmentTest {
  @get:Rule val initializeDefaultLocaleRule = InitializeDefaultLocaleRule()
  @get:Rule val oppiaTestRule = OppiaTestRule()
  @Inject lateinit var testCoroutineDispatchers: TestCoroutineDispatchers
  @Inject lateinit var platformParameterControllerDebugImpl: PlatformParameterControllerDebugImpl
  @Inject lateinit var monitorFactory: DataProviderTestMonitor.Factory
  @Inject lateinit var context: Context

  private companion object {
    private const val TEST_REMOTE_SYNC_UP_WORKER_PERIOD_HOURS = 24
    private const val TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE = false
    private const val TEST_LOCAL_OVERRIDE_SYNC_UP_WORKER_PERIOD_HOURS = 30
    private const val TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG = true
    private const val REMOTE_DATABASE_NAME = "platform_parameter_and_feature_flag_database"
    private const val LOCAL_OVERRIDE_DATABASE_NAME =
      "local_overridden_platform_parameter_and_feature_flag_database"
    private const val SPLASH_SCREEN_WELCOME_MSG_PARAMETER_NAME = "Splash Screen Welcome Message"
  }

  @Test
  fun testPlatformParametersFragment_verifyRecyclerView_hasCorrectItemCount() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val expectedCount = getEphemeralPlatformParameters().size
      onView(withId(R.id.platform_parameters_recycler_view))
        .check(RecyclerViewMatcher.hasItemCount(count = expectedCount))

      // Note to developers: if you add/remove a platform parameter, please update the
      // expected count.
      onView(withId(R.id.platform_parameters_recycler_view))
        .check(RecyclerViewMatcher.hasItemCount(count = 11))
    }
  }

  @Test
  fun testPlatformParametersFragment_verifyRecyclerViewItems_haveCorrectDetails() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      getEphemeralPlatformParameters().forEachIndexed { index, ephemeralPlatformParameter ->
        scrollToPosition(index)
        verifyPlatformParameterDisplayName(
          position = index,
          expectedDisplayName = getPlatformParameterDisplayName(ephemeralPlatformParameter.id)
        )
        verifyPlatformParameterSyncDetails(
          position = index,
          expectedSyncStatus = getSyncStatusText(ephemeralPlatformParameter.syncStatus)
        )
        verifyPlatformParameterValue(
          position = index,
          expectedValue = ephemeralPlatformParameter.currentValue
        )
      }
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withNoRemoteOrOverride_returnsCorrectDisplayName() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val position = getSplashScreenWelcomeMsgPosition()
      scrollToPosition(position)
      verifyPlatformParameterDisplayName(
        position = position,
        expectedDisplayName = SPLASH_SCREEN_WELCOME_MSG_PARAMETER_NAME
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withNoRemoteOrOverride_returnsNeverSyncedMessage() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      scrollToPosition(0)
      verifyPlatformParameterSyncDetails(
        position = 0,
        expectedSyncStatus = context.getString(R.string.platform_parameter_never_synced_message)
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withNoRemoteOrOverride_returnsDefaultValue() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      val splashScreenWelcomeMsgParameter = getEphemeralPlatformParameters()[0]

      scrollToPosition(0)
      verifyPlatformParameterValue(
        position = 0,
        expectedValue = splashScreenWelcomeMsgParameter.currentValue
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withNoRemoteOrOverride_hasNoBackgroundColor() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      scrollToPosition(0)
      verifyPlatformParameterBackgroundColor(
        position = 0,
        expectedColor = context.getColor(R.color.component_color_shared_item_background_solid_color)
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_intParam_withNoRemoteOrOverride_returnsDefaultValue() {
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      val syncUpWorkerParameter = getEphemeralPlatformParameters()[1]

      scrollToPosition(1)
      verifyPlatformParameterValue(
        position = 1,
        expectedValue = syncUpWorkerParameter.currentValue
      )
    }
  }

  @Test
  fun testPlatformParmetersFragment_boolParam_withOnlyRemoteValue_returnsRemoteValue() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val position = getSplashScreenWelcomeMsgPosition()
      scrollToPosition(position)
      verifyPlatformParameterValue(
        position = position,
        expectedValue = PlatformParameterValue.newBuilder()
          .setBoolean(TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE)
          .build()
      )
    }
  }

  @Test
  fun testPlatformParmetersFragment_boolParam_withOnlyRemoteValue_returnsSyncedFromServerMessage() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val position = getSplashScreenWelcomeMsgPosition()
      scrollToPosition(position)
      verifyPlatformParameterSyncDetails(
        position = position,
        expectedSyncStatus =
          context.getString(R.string.platform_parameter_synced_from_server_message)
      )
    }
  }

  @Test
  fun testPlatformParmetersFragment_boolParam_withOnlyRemoteValue_hasNoBackgroundColor() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      verifyPlatformParameterBackgroundColor(
        position = 0,
        expectedColor = context.getColor(R.color.component_color_shared_item_background_solid_color)
      )
    }
  }

  @Test
  fun testPlatformParmetersFragment_boolParam_withOnlyRemoteValue_returnsCorrectDisplayName() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val position = getSplashScreenWelcomeMsgPosition()
      scrollToPosition(position)
      verifyPlatformParameterDisplayName(
        position = position,
        expectedDisplayName = SPLASH_SCREEN_WELCOME_MSG_PARAMETER_NAME
      )
    }
  }

  @Test
  fun testPlatformParmetersFragment_intParam_withOnlyRemoteValue_returnsRemoteValue() {
    executeInPreviousAppInstance { testComponent ->
      addTestIntegerRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SYNC_UP_WORKER_PERIOD_HOURS
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val position = getSyncUpWorkerTimePeriodPosition()
      scrollToPosition(position)
      verifyPlatformParameterValue(
        position = position,
        expectedValue = PlatformParameterValue.newBuilder()
          .setInteger(TEST_REMOTE_SYNC_UP_WORKER_PERIOD_HOURS)
          .build()
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_onlyOverriddenValue_returnsOverriddenBoolValue() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      val position = getSplashScreenWelcomeMsgPosition()
      scrollToPosition(position)
      verifyPlatformParameterValue(
        position = position,
        expectedValue = PlatformParameterValue.newBuilder()
          .setBoolean(TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG)
          .build()
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_onlyOverriddenValue_returnsCorrectDisplayName() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      scrollToPosition(0)
      verifyPlatformParameterDisplayName(
        position = 0,
        expectedDisplayName = SPLASH_SCREEN_WELCOME_MSG_PARAMETER_NAME
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_onlyOverriddenValue_returnsCurrentlyOverriddenMsg() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      scrollToPosition(0)
      verifyPlatformParameterSyncDetails(
        position = 0,
        expectedSyncStatus = context.getString(
          R.string.platform_parameter_currently_overridden_message
        )
      )
    }
  }

  @Test
  fun testPlatfromParametersFragment_boolParam_onlyOverriddenValue_hasYellowBackgroundColor() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()
      scrollToPosition(0)
      verifyPlatformParameterBackgroundColor(
        position = 0,
        expectedColor =
          context.getColor(R.color.component_color_feature_flag_overridden_background_color)
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_intParam_onlyOverriddenValue_returnsOverriddenIntegerValue() {
    executeInPreviousAppInstance { testComponent ->
      addTestIntegerOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SYNC_UP_WORKER_PERIOD_HOURS
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      val position = getSyncUpWorkerTimePeriodPosition()
      scrollToPosition(position)
      verifyPlatformParameterValue(
        position = position,
        expectedValue = PlatformParameterValue.newBuilder()
          .setInteger(TEST_LOCAL_OVERRIDE_SYNC_UP_WORKER_PERIOD_HOURS)
          .build()
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_intParam_withOnlyOverrddenValue_alertIconIsVisible() {
    executeInPreviousAppInstance { testComponent ->
      addTestIntegerOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SYNC_UP_WORKER_PERIOD_HOURS
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      scrollToPosition(0)
      verifyOverriddenAlertIconIsVisible(0)
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withRemoteAndOverride_returnsOverriddenValue() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      scrollToPosition(0)
      verifyPlatformParameterValue(
        position = 0,
        expectedValue = PlatformParameterValue.newBuilder()
          .setBoolean(TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG)
          .build()
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withRemoteAndOverride_returnsOverriddenStatus() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      scrollToPosition(0)
      verifyPlatformParameterSyncDetails(
        position = 0,
        expectedSyncStatus = context.getString(
          R.string.platform_parameter_currently_overridden_message
        )
      )
    }
  }

  @Test
  fun testPlatformParametersFragment_boolParam_withRemoteAndOverride_hasYellowBackgroundColor() {
    executeInPreviousAppInstance { testComponent ->
      addTestBooleanRemotePlatformParameterToDatabase(
        testComponent,
        TEST_REMOTE_SPLASH_SCREEN_WELCOME_MESSAGE
      )
      addTestBooleanOverriddenPlatformParameterToDatabase(
        testComponent,
        TEST_LOCAL_OVERRIDE_SPLASH_SCREEN_WELCOME_MSG
      )
      testComponent.getTestCoroutineDispatchers().runCurrent()
    }
    setUpTestApplicationComponent()
    launch(PlatformParametersTestActivity::class.java).use {
      testCoroutineDispatchers.runCurrent()

      scrollToPosition(0)
      verifyPlatformParameterBackgroundColor(
        position = 0,
        expectedColor =
